--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,49 +1,64 @@
-.register-container {
-    width: 38%;
-    margin: auto;
-    padding: 0px 0px;
-    text-align: center;
-    /* background-color: var(--neutral-dark); */
-    border-radius: 10px;
-}
-
-input {
+.father-container-register {
+    font-family: var(--font-family);
+    background-color: var(--primary-dark);
+    width: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
+
 }
 
-.input-register {
-    width: 90%;
-    padding: 13px;
-    border: 1px solid #ccc;
-    /* background: var(--neutral-light); */
-    border-radius: 15px;
-    margin-top: 10px;
-    box-shadow: 0px 4px 4px 0px #00000040;
+.register-container {
+    background-color: var(--background-light);
+    padding: 2rem;
+    border-radius: 50px;
+    width: 520px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: #f5f5f5;
+    margin: 150px auto;
 }
 
-.register-button {
-    margin-top: 10px;
-    background-color: var(--neutral-dark);
-    color: var(--neutral-light);
-    border: none;
-    border-radius: 15px;
-    padding: 0.7rem 1.9rem;
-    cursor: pointer;
-    transition: background-color 0.1s;
+.register-container h2 {
+    font-size: 36px;
+    margin-bottom: 1.3rem;
+}
+
+.register-container p {
     font-size: 16px;
+    margin-bottom: 1.5rem;
+    color: var(--text-muted);
+}
+
+.label-register {
+    text-align: left;
+    margin-bottom: 0.1rem;
+    padding: 0 0.30rem;
+}
+
+.input-select {
+    padding: 15px;
+    border: 1px solid #3c3c4c;
+    border-radius: 5px;
+    background-color: #2f2f3f;
+    color: #f5f5f5;
+    outline: none;
+    transition: border-color 0.3s ease;
+    width: 100%;
+}
+
+
+.input-select:focus-visible {
+    border-color: #7a57d1;
 }
 
 .register-button:hover {
-    background-color: #333;
+    background-color: var(--primary-dark);
 }
 
-.account-type {
-    margin: 20px 10px;
-    text-align: left;
-    margin-bottom: 20px;
+.register-container a {
+    color: #7a57d1;
+    text-decoration: none;
+    font-weight: bold;
 }
-
-
-/* .account-type label {
-    margin-right: 10px;
-} */
