--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,57 +1,107 @@
+/* Contenedor principal del login */
+.father-container-login {
+    font-family: var(--font-family);
+    background-color: var(--primary-dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
 .login-container {
-    width: 35%;
-    margin: auto;
+    /* background-color: #2A2A3A; */
+    background-color: var(--background-light);
+    padding: 2rem;
+    border-radius: 50px;
+    width: 400px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     text-align: center;
-    border-radius: 10px;
-    font-family: Inter;
+    color: #f5f5f5;
+    /* margin: 150px auto; */
 }
 
-p {
-    font-size: large;
-    color: var(--neutral-dark);
+/* Título y subtítulo */
+.login-container h2 {
+    font-size: 36px;
+    margin-bottom: 0.5rem;
 }
 
-h2 {
-    margin-bottom: 0.5px;
-    margin-top: 0.1px;
-    font-size: 60px;
-    font-weight: 700px;
-    letter-spacing: -0.03em;
-    text-align: center;
-    color: var(--neutral-dark);
+.login-container p {
+    font-size: 16px;
+    margin-bottom: 1.5rem;
+    color: var(--text-muted);
 }
 
+/* Estilos de los campos de entrada */
 .input-container {
-    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+}
+
+.input-container label {
+    font-size: 15px;
+    color: var(--text-muted);
+    margin-bottom: 0.5rem;
 }
 
 .input-login {
-    width: 87%;
-    padding: 13px;
-    border: 1px solid #ccc;
-    /* background-color: var(--neutral-light); */
-    border-radius: 15px;
-    margin-top: 10px;
-    box-shadow: 0px 4px 4px 0px #00000040;
+    padding: 15px;
+    border: 1px solid #3c3c4c;
+    border-radius: 5px;
+    background-color: #2f2f3f;
+    color: #f5f5f5;
+    outline: none;
+    transition: border-color 0.3s ease;
+    width: 95%;
 }
 
+.input-login:focus {
+    border-color: #7a57d1;
+}
+
+/* Botón de inicio de sesión */
 .login-button {
-    margin-top: 10px;
-    padding: 15px 40px;
-    background-color: var(--neutral-medium);
-    color: var(--neutral-light);
-    border: none;
-    border-radius: 15px;
-    padding: 0.7rem 1.9rem;
-    cursor: pointer;
-    transition: background-color 0.1s;
+    width: 40%;
+    padding: 10px;
     font-size: 16px;
+    color: #fff;
+    /* background-color: #7a57d1; */
+    background-color: var(--primary-light);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 1rem;
 }
 
 .login-button:hover {
-    background-color: var(--neutral-dark);
+    background-color: #8a68e6;
 }
 
-/* .login-button:active {
-    background-color: #333;
-} */
+/* Enlace de registro */
+.login-container a {
+    color: #7a57d1;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.login-container a:hover {
+    text-decoration: underline;
+}
+
+/* Sombra en campos de entrada al hacer focus */
+.input-login:focus {
+    border-color: #7a57d1;
+    box-shadow: 0 0 5px rgba(122, 87, 209, 0.5);
+}
+
+
+.input-login:-webkit-autofill,
+.input-login:-webkit-autofill:hover,
+.input-login:-webkit-autofill:focus,
+.input-login:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0px 1000px var(--background-light) inset;
+    -webkit-text-fill-color: #f8f9fa;
+}
