--- a/src/components/Manage/ManageMovements.css
+++ b/src/components/Manage/ManageMovements.css
@@ -43,7 +43,7 @@
     background-color: #f9f9f9;
 }
 
-/* .movement-red {
+.movement-red {
     background-color: rgba(255, 0, 0, 0.2);
 }
 
@@ -59,4 +59,4 @@
 
 .movement-green {
     background-color: rgba(0, 255, 0, 0.2);
-} */
+}
