Deposit Interface has been updated

--- a/src/components/MainComponents/Carousel.css
+++ b/src/components/MainComponents/Carousel.css
@@ -75,7 +75,7 @@
     font-size: 3.7rem;
     cursor: pointer;
     /* color: #333; */
-    color: var(--neutral-dark);
+    color: var(--primary);
 }
 
 .left-arrow {
