report interface finished and updated

--- a/src/components/Manage/ManageViewBalance.css
+++ b/src/components/Manage/ManageViewBalance.css
@@ -19,7 +19,7 @@
 }
 
 .saldo-table caption {
-    background-color: var(--neutral-dark);
+    background-color: var(--primary-dark);
     color: white;
     font-size: 20px;
     padding: 10px;
